# la_consulta

./: .env.example  .gitignore  AGENTS.md  AGENT_4_COMPLETE.md  AGENT_PROMPTS_REFERENCE.md  AI_SERVICE_ARCHITECTURE.md  AI_TEST_NAVIGATION_FIX.md  API_INTEGRATION_STATUS.md  BRANCH_CLEANUP_MANUAL.md  BRANCH_CLEANUP_SUMMARY.md  BRANCH_DELETION_INSTRUCTIONS.md  BRANCH_DELETION_REPORT.md  BUILD_VERIFICATION.md  CI_CD_SETUP.md  CLAUDE.md  COMPLETION_STATUS.md  D1-D3-DEPLOYMENT-COMPLETE.md  DEMO_STATUS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_QUICK_REFERENCE.md  DOCUMENTATION_REORGANIZATION_ANALYSIS.md  E2E_TEST_RESULTS.md  EXECUTIVE_BRIEFING.md  EXPORT_FORM_ALIGNMENT.md  FINAL_IMPLEMENTATION_CHECKLIST.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINAL_TEST_STATUS.md  FIXES_APPLIED.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_FEATURES_COMPLETE.md  FRONTEND_FEATURES_FINAL.md  FRONTEND_FEATURES_VERIFICATION.md  GITHUB_DEPLOYMENT_GUIDE.md  GOOGLESHEETS_SERVICE_SUMMARY.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  MANUAL_TESTING_CHECKLIST.md  (+36 more)
Bach/: README.md
analysis/: EXECUTIVE-SUMMARY.md  architecture-map.md  (+12 more)
backend/: .env.example  .gitignore  PERSISTENCE.md  README.md  pyproject.toml
backend/app/: auth.py  circuit_breaker.py  config.py  database.py  main.py  middleware.py  models.py  models.py.backup  rate_limiter.py  schemas.py
backend/app/routers/: ai.py  annotations.py  auth.py  documents.py  extractions.py  gemini.py
backend/app/services/: __init__.py  llm.py
backend/tests/: test_persistence.py
(+157 files in other folders)
